// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CCollapse customize 1`] = `
<div>
  <div
    class="bazinga collapse"
    style="transition: height 350ms ease 0s;"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCollapse component 1`] = `
<div>
  <div
    class="collapse"
    style="transition: height 350ms ease 0s;"
  >
    Test
  </div>
</div>
`;
